Issue IMCMS-332: New design to super admin page: files tab - Add scrollbar;

--- a/src/main/webapp/css/admin/imcms-super-admin.css
+++ b/src/main/webapp/css/admin/imcms-super-admin.css
@@ -168,16 +168,20 @@
     justify-content: space-between;
 }
 
-.first-sub-files {
-    background-color: #b94a48;
+.first-sub-files,
+.second-sub-files {
+    height: 200px;
+    overflow-y: auto;
     border: 1px solid gainsboro;
     justify-content: space-between;
 }
 
+.first-sub-files {
+    background-color: #b94a48;
+}
+
 .second-sub-files {
     background-color: aqua;
-    border: 1px solid gainsboro;
-    justify-content: space-between;
 }
 
 .file-row,
